--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@tanstack/react-query": "^5.14.1",
     "@tanstack/react-query-devtools": "^5.14.1",
     "@tanstack/react-table": "^8.11.0",
+    "add": "^2.0.6",
+    "antd": "^5.12.4",
     "apexcharts": "^3.45.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -45,11 +48,17 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "npx": "^10.2.2",
+    "prop-types": "^15.8.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3",
+    "shadcn-ui": "^0.4.1",
+    "styled-components": "^6.1.1",
+    "table": "^6.8.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "use-broadcast-ts": "^1.4.0",
