--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -35,6 +36,9 @@
     "@tanstack/react-query": "^5.14.1",
     "@tanstack/react-query-devtools": "^5.14.1",
     "@tanstack/react-table": "^8.11.0",
+    "@types/lodash.template": "^4.5.3",
+    "@types/react-color": "^3.0.10",
+    "@vercel/analytics": "^1.0.1",
     "add": "^2.0.6",
     "antd": "^5.12.4",
     "apexcharts": "^3.45.0",
@@ -44,7 +48,9 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "jotai": "^2.3.1",
     "lodash": "^4.17.21",
+    "lodash.template": "^4.5.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -53,17 +59,21 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.10.3",
     "shadcn-ui": "^0.4.1",
     "styled-components": "^6.1.1",
     "table": "^6.8.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "use-broadcast-ts": "^1.4.0",
+    "vaul": "^0.8.0",
     "yup": "^1.3.3",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
